services/team2/academic-plan-service/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
spec:
  rules:
    - host: academic-plan.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: academic-plan-service
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
